--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 </head>
 <body>
 
-<pre>
+<pre{
+      font-size: 17px 
+      background-color: #A52A2A; 
+      color: #FFFFFF; 
+      } 
+      
 Projects: 
     Raspberry Pi: 
   <a href  = " "> </a> 
