--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       background-color: #A52A2A; 
       color: #FFFFFF; 
       } 
-      
+      <img src = "cyberman.png" height = "100px"> <img src = "cyberwoman.png" height = "100px">
 Projects: 
     Raspberry Pi: 
-  <a href  = " "> </a> 
+
 </pre>
 
 </body>
