--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <html><head><title> sourCream1.github.io </title>
 <style>
 
-</style>
-</head>
-<body>
-
 <pre{
-      font-size: 17px 
+      font-size: 17px;  
       background-color: #A52A2A; 
       color: #FFFFFF; 
       } 
+a{
+      font-size: 17px;  
+      background-color: #A52A2A; 
+      color: #FFFFFF; 
+      } 
+</style>
+
+</head>
+<body>    
+
       <img src = "cyberman.png" height = "100px"> <img src = "cyberwoman.png" height = "100px">
 Projects: 
     Raspberry Pi: 
