--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       } 
 a{
       font-size: 17px;  
-      background-color: #A52A2A; 
+      background-color: #fff; 
       color: #FFFFFF; 
       } 
 </style>
