--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <html><head><title> sourCream1.github.io </title>
 <style>
 
-<pre{
-      font-size: 17px;  
-      background-color: #A52A2A; 
-      color: #FFFFFF; 
-      } 
-a{
-      font-size: 17px;  
-      background-color: #fff; 
-      color: #FFFFFF; 
-      } 
+pre{
+  font-size: 23px;
+  background-color: #21c000;
+  color:#fff;
+  }
+ a{
+  background-color: #fff;
+  color:#000;
+  }
 </style>
 
 </head>
